--- a/src/app/debit-card-application/debit-card-application.component.css
+++ b/src/app/debit-card-application/debit-card-application.component.css
@@ -86,4 +86,15 @@
       box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
       margin-bottom: 10px;
     }
-  
+    .modalButton{
+      font-size: 10px;
+      background-color: #4CAF50; 
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      margin: 4px 2px;
+      cursor: pointer;
+    }
