--- a/src/app/registration-form/registration-form.component.html
+++ b/src/app/registration-form/registration-form.component.html
@@ -27,6 +27,7 @@
             <label class="control-label" >Gender <span class="text-danger"*ngIf="form.get('gender').hasError('required')">*</span>:</label>
              <div class="col=md-10 regInput" >
             <select class="form-control" id="gender" formControlName="gender" aria-placeholder="select" required >
+          <option value="" selected>Select</option>
           <option value='Male'>Male</option>
           <option value='Female'>Female</option>
           <option value='Other'>Other</option>
@@ -73,7 +74,7 @@
              
 
         <div class="form-group">
-          <label for="" class="control-label">Aadhar card number:</label>
+          <label for="" class="control-label">Aadhar UID number:</label>
           <span class="text-danger"*ngIf="form.get('aadharCard').hasError('required')">*</span>
            <div class="col=md-10 regInput" >
           <input type="text" class="form-control" id="aadharCard" placeholder="Enter your 12 digit aadhar number" formControlName="aadharCard" required> 
@@ -170,16 +171,40 @@
         
         <div class="form-group">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck" required>
+            <input class="form-check-input" type="checkbox" id="gridCheck" formControlName=checkBox required>
             <label class="form-check-label" for="gridCheck">
               I  agreee with terms and Conditions
             </label>
           </div>
         </div>
-        <button type="submit" [disabled]="!form.valid">Create account</button>
+        <button type="submit" [disabled]="!form.valid" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create account</button>
    
         
     </form>
     </div>
+
+   
+
+<!-- Modal -->
+<div id="myModal" class="modal " role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+      
+       
+      </div>
+      <div class="modal-body">
+        <p>Account creation successfull! Your password is:
+          {{password}} </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button"  class="btn btn-default modalButton" data-dismiss="modal">OK</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 </div>
 
