--- a/src/app/debit-card-application/debit-card-application.component.html
+++ b/src/app/debit-card-application/debit-card-application.component.html
@@ -178,7 +178,7 @@
           
           <div class="form-group">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck" required>
+              <input class="form-check-input" type="checkbox" id="gridCheck" formControlName=checkBox required>
               <label class="form-check-label" for="gridCheck">
                 I  agreee with terms and Conditions
               </label>
