--- a/src/app/examples/signup/signup.component.html
+++ b/src/app/examples/signup/signup.component.html
@@ -28,7 +28,7 @@
                                 </div>
                                   <input type="text" class="form-control" placeholder="Password" (focus)="focus1=true" (blur)="focus1=false" >
                               </div>
-                              <button class="btn btn-danger btn-block btn-round">Register</button>
+                              <button class="btn btn-danger btn-block btn-round">Login</button>
                           </form>
                           <div class="forgot">
                               <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
