--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,6 +6,13 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                
+
+                <li class="nav-item" >
+                    <a href="http://localhost:4200/#/signup"class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>Sign Up</a>
+                </li>
+                <li class="nav-item" >
+                    <a href="http://localhost:4200/#/login"  class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>Login</a>
+                </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a href="#"class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>About</a>
                 </li>
