--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,10 +8,12 @@
                
 
                 <li class="nav-item" >
-                    <a href="http://localhost:4200/#/signup"class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>Sign Up</a>
+                    <a routerLink = "signup"button type="button" class="btn btn-danger">Sign Up</a>
+
                 </li>
                 <li class="nav-item" >
-                    <a href="http://localhost:4200/#/login"  class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>Login</a>
+                    <a routerLink = "login"button type="button" class="btn btn-danger">Login</a>
+
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a href="#"class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>About</a>
