--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,6 +5,9 @@
                         
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item" >
+                    <a routerLink = "home"button type="button" class="btn btn-danger">Home</a>
+
                
 
                 <li class="nav-item" >
@@ -15,21 +18,15 @@
                     <a routerLink = "login"button type="button" class="btn btn-danger">Login</a>
 
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a href="#"class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i>About</a>
-                </li>
-                <li class="nav-item">
-                    <div ngbDropdown class="d-inline-block dropdown">
-                        <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>Contact</a>
-                        <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
-                            <a class="dropdown-item">Address</a>
-                            <a class="dropdown-item">Email</a>
-                            <a class="dropdown-item">Phone</a>
-                        </div>
-                    </div>
-                </li>
+                <li class="nav-item" >
+                    <a routerLink = "about"button type="button" class="btn btn-danger">About</a>
                 
-              </ul>
+                </li>
+                <li class="nav-item" >
+                    <a routerLink = "contacts"button type="button" class="btn btn-danger">Contact</a>
+                
+                </li>
+               </ul>
             
         </div> 
         </nav> 
