--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -10,12 +10,16 @@
                 <h1 class="presentation-subtitle text-center" style="color: rgb(209, 209, 235);">Your perfect banking partner!!!!!!</h1>
             </div>
         </div>
-        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
-        
+        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); ">
+      </div>
     </div>
+ 
+    <br><br><br>
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
-          <div class="card">
+          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin: 0 auto; 
+          float: none; 
+          margin-bottom: 10px;margin-left: 311px; ">
             <img src="assets\img\credit_card.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -24,7 +28,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <img src="assets\img\credit_card.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -32,8 +36,11 @@
             </div>
           </div>
         </div>
+        
         <div class="col">
-          <div class="card">
+          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6" style="margin: 0 auto; 
+          float: none; 
+          margin-bottom: 10px; margin-left: 311px;">
             <img src="assets\img\credit_card.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -42,7 +49,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <img src="assets\img\credit_card.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -51,6 +58,8 @@
           </div>
         </div>
       </div>
+    
+</div>
     
    
                   
