--- a/src/app/components/nucleoicons/nucleoicons.component.html
+++ b/src/app/components/nucleoicons/nucleoicons.component.html
@@ -1,18 +1,18 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/bankim.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/vinvin.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
             
              
-              <div class="card text-dark bg-info mb-3" style="max-width: 32rem;align-content: center;">
-                <div class="card-header">Header</div>
+          <div class="card text-white bg-dark mb-3"  >
+                <div class="card-header" style="font-weight: bold; ">Contact Pecunia<i class="nc-icon nc-mobile"></i></div>
                 <div class="card-body">
-                  <h5 class="card-title">Info card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  
+                  <p class="card-text" style="font-size: large; ">Give us a missed call at 800-500 and will get back to you!</p>
                 </div>
               </div>
               
               </div>
             
-        <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
+        
         
