--- a/src/app/examples/signup/signup.component.html
+++ b/src/app/examples/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="page-header" style="background-image: url('./assets/img/login-image.jpg');">
+    <div class="page-header" style="background-image: url('./assets/img/pen2.jpg');">
         <div class="filter"></div>
             <div class="container">
                 <div class="row">
@@ -7,7 +7,7 @@
                       <div class="card card-register">
                           <h3 class="title">Welcome</h3>
                           
-                          <form class="register-form">
+                          <form class="register-form" >
                               <label>Email</label>
                               <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
                                 <div class="input-group-prepend">
