--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -1,9 +1,9 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/bankim.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/about.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
             <h1 style="font-size: 28px;">Pecunia bank</h1>
-            <h3 style="font-size: 15px;">Pecunia₹ Finance Limited, established in the year 2015,  is an Indian private sector bank headquartered in Bangalore and is functioning only in Bangalore, India. In January 2019, Reserve Bank of India (RBI) issued the license to Pecunia₹ Finance Limited, to carry on banking business.
+            <h3 style="font-size: 15px; font-weight: 500;">Pecunia₹ Finance Limited, established in the year 2015,  is an Indian private sector bank headquartered in Bangalore and is functioning only in Bangalore, India. In January 2019, Reserve Bank of India (RBI) issued the license to Pecunia₹ Finance Limited, to carry on banking business.
                 We have one of the largest and most respected Wealth Management teams in India providing the widest range of solutions to individuals  and employed professionals. As of December 30,  2018 Pecunia₹ has a net-worth of approximately Rs 730 crore and micro-finance loans of Rs 300 crore in its books.</h3>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
         
