--- a/src/app/examples/sign-in/sign-in.component.html
+++ b/src/app/examples/sign-in/sign-in.component.html
@@ -1,9 +1,9 @@
 <div  class="regform border border-primary">
     <div class="container">
-      <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal">
+      <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal" style="background-color:rgb(221, 106, 30);">
         <div>
-          <img src="assets/img/logo.png" alt="" style="height:100px">
-          <h1>Registration Form</h1>
+          
+          <h3 class="title" style="align-content: center;">Registeration Form</h3>
         </div>  
        
         
@@ -98,7 +98,7 @@
           
           <div class="form-group">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck" style="color: aqua;" formControlName=checkBox required>
+              <input class="form-check-input" type="checkbox" id="gridCheck" formControlName=checkBox required>
               <label class="form-check-label" for="gridCheck">
                 I  agreee with terms and Conditions
               </label>
