--- a/src/app/examples/sign-in/sign-in.component.html
+++ b/src/app/examples/sign-in/sign-in.component.html
@@ -1,9 +1,10 @@
+
 <div  class="regform border border-primary">
     <div class="container">
-      <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal" style="background-color:rgb(221, 106, 30);">
+      <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal" style="background-color:rgb(255, 143, 94); margin-top: 150px;">
         <div>
           
-          <h3 class="title" style="align-content: center;">Registeration Form</h3>
+          <h3 class="title" style="align-content: center; font-weight: bold;">Registeration Form</h3>
         </div>  
        
         
@@ -97,7 +98,7 @@
       
           
           <div class="form-group">
-            <div class="form-check">
+            <div class="form-check-label">
               <input class="form-check-input" type="checkbox" id="gridCheck" formControlName=checkBox required>
               <label class="form-check-label" for="gridCheck">
                 I  agreee with terms and Conditions
