--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
+<nav class="navbar navbar-expand-lg static-top navbar-transparent"  stcolor-on-scroll="500">
    
           <img src="assets/img/bankimm.jpeg" class="img-fluid" alt="Responsive image">
             
