After adding forms

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -185,7 +185,7 @@ footer{
         
        
     </div>
-    
+    <br>
     
     <div class="row row-cols-1 row-cols-md-2 g-4" style="background-image: url('assets/img/mone2.jpg')" >
         <div class="col" >
@@ -197,6 +197,7 @@ footer{
               <h5 class="card-title" style="font-weight: 500;" >Car Loan</h5>
               <p class="card-text">Dreaming of owning a car? Our Car Loan aims to ensures that you drive around the city in your own vehicle! Avail a car loan, or opt for a pre-approved car loan, and get the best interest rates. Pecunia Bank’s New Car Loan offers car loans from Rs. 1 Lakh upto 100% on-road price along with benefits.</p>
             </div>
+            <a routerLink = "login"button type="button" class="btn btn-danger">Login</a>
           </div>
         </div>
         <div class="col">
