--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -197,7 +197,7 @@ footer{
               <h5 class="card-title" style="font-weight: 500;" >Car Loan</h5>
               <p class="card-text">Dreaming of owning a car? Our Car Loan aims to ensures that you drive around the city in your own vehicle! Avail a car loan, or opt for a pre-approved car loan, and get the best interest rates. Pecunia Bank’s New Car Loan offers car loans from Rs. 1 Lakh upto 100% on-road price along with benefits.</p>
             </div>
-            <a routerLink = "login"button type="button" class="btn btn-danger">Login</a>
+            <a routerLink = "/vehicleloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
           </div>
         </div>
         <div class="col">
@@ -207,6 +207,7 @@ footer{
               <h5 class="card-title" style="font-weight: 500;">Personal Loan</h5>
               <p class="card-text"> Personal Loans can be used for plenty of purposes! They can be availed when you are planning a vacation, renovating your home or arranging a dream wedding for yourself or somebody special in the family.  You can get a Personal Loan from Rs. 50,000 upto Rs. 15,00,000 with minimal documentation and speedy approval</p>
             </div>
+            <a routerLink = "/personalloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
           </div>
         </div>
         
@@ -219,6 +220,7 @@ footer{
               <h5 class="card-title" style="font-weight: 500;">Gold Loan</h5>
               <p class="card-text">Have an urgent need for cash , Now you can use your gold to avail a Gold Loan starting from Rs. 25,001 upto Rs. 25,00,000. Pecunia Bank Gold Loans provide loan against gold with same day loan disbursement.</p>
             </div>
+            <a routerLink = "/goldloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
           </div>
         </div>
         <div class="col">
@@ -228,6 +230,7 @@ footer{
               <h5 class="card-title" style="font-weight: 500;">Home Loan</h5>
               <p class="card-text">Our affordable and flexible home loans are designed to take you closer to your dream home.We also provide you with legal and technical counselling to help you make the right home buying decision. </p>
             </div>
+            <a routerLink = "/homeloan" button type="button" class="btn btn-info" style="background-color: #ca1f7b;border-color: #ca1f7b;">Apply now</a>
           </div>
         </div>
       </div>
