--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg static-top navbar-transparent"  stcolor-on-scroll="500">
+<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
    
-          <img src="assets/img/bankimm.jpeg" class="img-fluid" alt="Responsive image">
+          <img src="assets/img/bankimm.jpeg" class="img-fluid" >
             
                         
-        <div class="navbar-collapse" id="navbarToggler">
+        <div class="navbar-collapse" >
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" >
                     <a routerLink = "home"button type="button" class="btn btn-danger">Home</a>
