--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -243,28 +243,15 @@ footer{
 
          <img src="assets\img\foot.png" alt="">
 
-           <p class="footer-links">
-           <a href="#">Home</a>
-·
-           <a href="#">Blog</a>
-·
-           <a href="#">Pricing</a>
-·
-  <a href="#">About</a>
-·
-  <a href="#">Faq</a>
-·
-  <a href="#">Contact</a>
-  </p>
-
-  <p class="footer-company-name">Demo &copy; 2021</p>
+           
+·<p class="footer-company-name">Pecunia&copy; 2021</p>
   </div>
 
   <div class="footer-center">
 
   <div>
   <i class="fa fa-map-marker"></i>
-  <p><span>21 Revolution Street</span> India</p>
+  <p><span>21 Revolution Street</span>Bangalore,India</p>
   </div>
 
   <div>
@@ -274,21 +261,14 @@ footer{
 
   <div>
   <i class="fa fa-envelope"></i>
-  <p><a href="mailto:support@company.com">contact@demo.com</a></p>
+  <p><a href="mailto:support@company.com">contact@pecunia.com</a></p>
   </div>
 
   </div>
 
   <div class="footer-right">
-
-  <p class="footer-company-about">
-  <span>About the company</span>
-DEmo is a demo website for bootstrap &amp; SEO Learner.
-  </p>
-
-  <div class="footer-icons">
-
-  <a href="#"><i class="fa fa-facebook"></i></a>
+ <div class="footer-icons">
+ <a href="#"><i class="fa fa-facebook"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
   <a href="#"><i class="fa fa-github"></i></a>
