--- a/src/app/components/nucleoicons/nucleoicons.component.html
+++ b/src/app/components/nucleoicons/nucleoicons.component.html
@@ -5,14 +5,23 @@
             
              
           <div class="card text-white bg-dark mb-3"  >
-                <div class="card-header" style="font-weight: bold; ">Contact Pecunia<i class="nc-icon nc-mobile"></i></div>
+                <div class="card-header" style="font-weight: bold;font: italic; ">Get in touch with us, we are happy to assist you </div>   
+                <!-- <i class="nc-icon nc-mobile"></i> -->
                 <div class="card-body">
-                  
-                  <p class="card-text" style="font-size: large; ">Give us a missed call at 800-500 and will get back to you!</p>
-                </div>
+                  <i class="fa fa-map-marker"></i><p><span> Pecunia Bank, 21 Revolution Street, </span>Bangalore,India</p>
+                 </div>
+                 
+                <div>
+                  <i class="fa fa-phone"></i>
+                  <p>800-500</p>
+                  </div>
+                
+                  <div>
+                  <i class="fa fa-envelope"></i>
+                  <p><a href="mailto:support@company.com">contact@pecunia.com</a></p>
+                  </div>
               </div>
-              
               </div>
-            
-        
-        
+             </div>
+              <div>
+               
