--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,34 +1,27 @@
 <nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
-   
-          <img src="assets/img/bankimm.jpeg" class="img-fluid" >
-            
-                        
-        <div class="navbar-collapse" >
+<img src="assets/img/bankimm.jpeg" class="img-fluid" >
+             <div class="navbar-collapse" >
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" >
                     <a routerLink = "home"button type="button" class="btn btn-danger">Home</a>
-
-               
-
-                <li class="nav-item" >
-                    <a routerLink = "signup"button type="button" class="btn btn-danger">Sign Up</a>
-
-                </li>
-                <li class="nav-item" >
-                    <a routerLink = "login"button type="button" class="btn btn-danger">Login</a>
-
                 </li>
                 <li class="nav-item" >
                     <a routerLink = "about"button type="button" class="btn btn-danger">About</a>
-                
                 </li>
                 <li class="nav-item" >
                     <a routerLink = "contacts"button type="button" class="btn btn-danger">Contact</a>
-                
                 </li>
-               </ul>
-            
-        </div> 
+               <li class="nav-item" >
+                    <a routerLink = "signup"button type="button" class="btn btn-danger">Sign Up</a>
+                </li>
+                <li class="nav-item" >
+                    <a routerLink = "login"button type="button" class="btn btn-danger">Login</a>
+                 </li>
+                 <!-- <li class="nav-item" >
+                    <a routerLink = "user-profile"button type="button" class="btn btn-danger">Profile</a>       ...just to check profile page
+                 </li> -->
+                </ul>
+             </div> 
         </nav> 
     
 
