--- a/src/app/components/nucleoicons/nucleoicons.component.html
+++ b/src/app/components/nucleoicons/nucleoicons.component.html
@@ -1,18 +1,72 @@
 <div class="page-header" data-parallax="true" style="background-image: url('./assets/img/vinvin.jpg');">
-    <div class="filter"></div>
+    
+  <!-- Contact Us Section -->
+  <section class="Material-contact-section section-padding section-dark">
     <div class="container">
-        <div class="motto text-center">
-            
+        <div class="row">
+            <!-- Section Titile -->
+            <div class="col-md-12 wow animated fadeInLeft" data-wow-delay=".2s">
+                <h1 class="section-title">We would love to <br> hear from you</h1>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Section Titile -->
+            <div class="col-md-6 mt-3 contact-widget-section2 wow animated fadeInLeft" data-wow-delay=".2s">
+              <p>Pecunia₹  Finance Limited, established in the year 2015,  is an Indian private sector bank headquartered in Bangalore
+                 and is functioning only in Bangalore, India. In January 2019, Reserve Bank of India (RBI) issued the license to Pecunia₹ 
+                 Finance Limited, to carry on banking business.Contact us through any mode of queries</p>
+            <h3>Contact Us</h3> 
              
-          <div class="card text-white bg-dark mb-3"  >
-                <div class="card-header" style="font-weight: bold; ">Contact Pecunia<i class="nc-icon nc-mobile"></i></div>
-                <div class="card-body">
-                  
-                  <p class="card-text" style="font-size: large; ">Give us a missed call at 800-500 and will get back to you!</p>
-                </div>
+                 <div class="find-widget">
+               <p>Pecunia₹  Finance Limited</p> 
+              </div>
+              <div class="find-widget">
+                <p>Neeladri Main Road, Karuna Nagar, Electronics City Phase 1, Electronic City, Bengaluru, Karnataka 560100</p>
+              </div>
+              <div class="find-widget">
+                Phone:  <p>800-500</p>
               </div>
               
+              <div class="find-widget">
+                <p>  Working hours: Mon to Sat: 09:30 AM - 10.30 PM</p>
               </div>
-            
-        
-        
+            </div>
+            <!-- contact form -->
+            <div class="col-md-6 wow animated fadeInRight" data-wow-delay=".2s">
+                <form class="shake" role="form" method="post" id="contactForm" name="contact-form" data-toggle="validator">
+                    <!-- Name -->
+                    <div class="form-group label-floating">
+                      <label class="control-label" for="name">Name</label>
+                      <input class="form-control" id="name" type="text" name="name" required data-error="Please enter your name">
+                      <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- email -->
+                    <div class="form-group label-floating">
+                      <label class="control-label" for="email">Email</label>
+                      <input class="form-control" id="email" type="email" name="email" required data-error="Please enter your Email">
+                      <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- Subject -->
+                    <div class="form-group label-floating">
+                      <label class="control-label">Subject</label>
+                      <input class="form-control" id="msg_subject" type="text" name="subject" required data-error="Please enter your message subject">
+                      <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- Message -->
+                    <div class="form-group label-floating">
+                        <label for="message" class="control-label">Message</label>
+                        <textarea class="form-control" rows="3" id="message" name="message" required data-error="Write your message"></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- Form Submit -->
+                    <div class="form-submit mt-5">
+                        <button class="btn btn-common" type="submit" id="form-submit"><i class="material-icons mdi mdi-message-outline"></i> Send Message</button>
+                        <div id="msgSubmit" class="h3 text-center hidden"></div>
+                        <div class="clearfix"></div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+  </section>
+</div>
