--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
    
-          <img src="assets/img/bankimm.jpeg" class="img-fluid" >
+          <img src="assets/img/foot.png" class="img-fluid" >
             
                         
         <div class="navbar-collapse" >
