--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,3 +1,25 @@
 img{
     size: 500px;
+}img{
+    size: 500px;
+}
+
+.img-fluid{
+    width:8%;
+   
+}
+.navbar-collapse{
+    margin-right:30px;
+}
+.btn-danger {
+    background-color: #343a40;
+    border-color: #343a40;
+    color: #FFFFFF;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .show > .btn-danger.dropdown-toggle {
+    background-color: #000000 !important;
+    color: #FFFFFF !important;
+    border-color: #000000 !important;
 }
