--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -264,7 +264,7 @@ footer{
 
   <div>
   <i class="fa fa-map-marker"></i>
-  <p><span>21 Revolution Street</span> India</p>
+  <p>Neeladri Main Road, Karuna Nagar, <br> Electronics City Phase 1,  Electronic City,<br> Bengaluru, Karnataka 560100India</p>
   </div>
 
   <div>
