--- a/src/app/examples/personal-loan/personal-loan.component.html
+++ b/src/app/examples/personal-loan/personal-loan.component.html
@@ -61,9 +61,9 @@
 
         <div class="form-group">
           <label for="occupation" class="control-label">Expected amount:</label>
-          <span class="text-danger"*ngIf="form.get('expectedAmount').hasError('required')">*</span>
+          <span class="text-danger"*ngIf="form.get('amount').hasError('required')">*</span>
            <div class="col=md-10 regInput" >
-          <input type="text" class="form-control" id="expectedAmount" placeholder="Expected amount" formControlName="expectedAmount" required>
+          <input type="text" class="form-control" id="amount" placeholder="Expected amount" formControlName="amount" required>
         </div>
       </div>
           <div class="form-group">
